# Sunshine5

./: CMakeLists.txt  package.json
.github/workflows/: CI.yml  auto-create-pr.yml  automerge.yml  ci-docker.yml  codeql.yml  cpp-lint.yml  issues-stale.yml  localize.yml  python-flake8.yml  update-pages.yml  yaml-lint.yml
docs/: requirements.txt
scripts/icons/: convert_and_pack.sh
src/: process.h  rtsp.cpp  stat_trackers.cpp  stat_trackers.h  upnp.cpp  video_colorspace.cpp  video_colorspace.h
src/nvenc/: nvenc_base.cpp  nvenc_base.h  nvenc_colorspace.h  nvenc_config.h  nvenc_d3d11.cpp  nvenc_d3d11.h  nvenc_encoded_frame.h  nvenc_utils.cpp  nvenc_utils.h
src/platform/: common.h
src_assets/windows/assets/shaders/directx/include/: base_vs.hlsl  base_vs_types.hlsl
tools/: CMakeLists.txt
